--- a/styles/calculator/index.module.css
+++ b/styles/calculator/index.module.css
@@ -26,6 +26,8 @@
     }
     div.main__result {
         width: 50%;
+        padding:40px 20px;
+        box-sizing: border-box;
         -webkit-box-ordinal-group:3;
             -ms-flex-order:2;
                 -webkit-order:2;
@@ -55,6 +57,8 @@
     }
     div.main__result {
         width: 50%;
+        padding:40px 20px;
+        box-sizing: border-box;
         -webkit-box-ordinal-group:3;
             -ms-flex-order:2;
                 -webkit-order:2;
@@ -74,7 +78,9 @@
     }
     div.main__calculator {
         width: 50%;
+        padding:40px 20px;
         margin-right:32px;
+        box-sizing: border-box;
         -webkit-box-ordinal-group:2;
             -ms-flex-order:1;
                 -webkit-order:1;
@@ -305,7 +311,9 @@ div.module_result_block {
 }
 div.module_result_block_loader {
     position: relative;
-    width:87.5%;
+    max-width: 450px;
+    width:100%;
+    min-width: 50px;
     height:70px;
     background-color: var(--block-color);
     -webkit-border-radius: 24px;
