--- a/styles/calculator/index.module.css
+++ b/styles/calculator/index.module.css
@@ -263,11 +263,25 @@ select.main__calculator_module_select {
     font-size:16px;
     border-radius: 0 24px 24px 0;
     background: url(/img/top.svg) no-repeat 95% 50% var(--header-color);
+    padding:0 30px 0 10px !important;
+    -webkit-padding-end: 30px !important;
+    -webkit-padding-start: 10px !important;
+    box-sizing: border-box;
 }
 input.main__calculator_module_input {
     width:95%;
     font-size:16px;
     font-weight: 500;
+    text-overflow: ellipsis;
+    white-space:nowrap;
+    overflow: hidden;
+    padding-right:32px;
+    box-sizing: border-box;
+}
+input.main__calculator_module_input:placeholder-shown {
+    text-overflow: ellipsis;
+    white-space:nowrap;
+    overflow: hidden; 
 }
 p.click_event {
     margin-top:16px;
@@ -279,7 +293,7 @@ div.module_result_row {
     margin-top:32px;
     display: -ms-grid;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     grid-gap: 24px;
     gap: 24px;
 }
